k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okteto-env-test
  labels:
    app: okteto-env-test
spec:
  selector:
    app: okteto-env-test
  ports:
    - name: http
      port: 3000
      targetPort: 3000
